--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form action="#" method="post" >
+		<label for="name">Name</label>
+		<input type="text" id="name" minilength="3" maxlength="50" required><br><br>
+		<label for="portfolio">Portfolio</label>
+		<input type="URL" id="portfolio" required><br><br>
+		<label for="favColor	">Favorite Color</label>
+		<input type="Color" id="favColor"  ><br><br>
+				<label for="likeness">Likeness</label>
+		<input type="Range	" id="likeness" min="1" max="100"	><br><br>
+		
+	
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
