--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
 		<label for="portfolio">Portfolio</label>
 		<input type="URL" id="portfolio" required><br><br>
 		<label for="favColor	">Favorite Color</label>
-		<input type="Color" id="favColor"  ><br><br>
+		<input type="Color" id="favColor" required  ><br><br>
 				<label for="likeness">Likeness</label>
-		<input type="Range	" id="likeness" min="1" max="100"	><br><br>
+		<input type="Range	" id="likeness" min="1" max="100" required><br><br>
 		
 	
 	</form>
