--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<label for="name">Name</label>
 		<input type="text" id="name" minilength="3" maxlength="50" required><br><br>
 		<label for="portfolio">Portfolio</label>
-		<input type="URL" id="portfolio" required><br><br>
+		<input type="url" id="portfolio" required><br><br>
 		<label for="favColor	">Favorite Color</label>
 		<input type="Color" id="favColor" required  ><br><br>
 				<label for="likeness">Likeness</label>
