--- a/main.html
+++ b/main.html
@@ -11,15 +11,17 @@
 	<h1>Feedback Form</h1>
 	<form action="#" method="post" >
 		<label for="name">Name</label>
-		<input type="text" id="name" minlength="3" maxlength="50" required><br><br>
+		<input type="text" id="name" minlength="3" maxlength="50" required><br>
+		<br>
 		<label for="portfolio">Portfolio</label>
 		<input type="url" id="portfolio" required><br><br>
-		<label for="favColor	">Favorite Color</label>
-		<input type="Color" id="favColor" required  ><br><br>
-				<label for="likeness">Likeness</label>
-		<input type="Range	" id="likeness" min="1" max="100" required><br><br>
 		
-	
+		<label for="favColor	">Favorite Color</label>
+		<input type="Color" id="favColor" ><br><br>
+		
+		<label for="likeness">Likeness</label>
+		<input type="Range	" id="likeness" min="1" max="100" /><br><br>
+		
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
