--- a/main.html
+++ b/main.html
@@ -10,17 +10,22 @@
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
 	<form id="my-form" method="post" >
+		<div>
 		<label for="name">Name</label>
-		<input type="text" id="name" minlength="3" maxlength="50" required><br>
-		<br>
+		<input type="text" id="name" minlength="3" maxlength="50" required>
+		</div>
+		<div>
 		<label for="portfolio">Portfolio</label>
-		<input type="url" id="portfolio" required><br><br>
-		
-		<label for="favColor	">Favorite Color</label>
-		<input type="Color" id="favColor" ><br><br>
-		
+		<input type="url" id="portfolio"  name="portfolio">
+		</div>
+		<div>
+		<label for="favColor">Favorite Color</label>
+		<input type="Color" id="favColor" name= "favColor">
+		</div>
+		<div>
 		<label for="likeness">Likeness</label>
-		<input type="Range" id="likeness" min="1" max="100" /><br><br>
+		<input type="Range" id="likeness" min="1" max="100"/>
+		</div>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
